src/objects/Plan_Update_Request__c.object
<CustomObject>
    <description>MG_Plan Update Request</description>
    <fields>
        <fullName>Auto_Approval_Result__c</fullName>
        <label>Auto Approval Result</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Change_in_Price__c</fullName>
        <formula>Price__c - Previous_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Change in Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Display_in_Zonda__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Display in Zonda</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Garage__c</fullName>
        <label>Garage</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Meyers_Id__c</fullName>
        <description>Used to store the Meyers SF ID for the merge. May be removed after the merge or 12/19</description>
        <externalId>true</externalId>
        <inlineHelpText>Used to store the Meyers SF ID for the merge. May be removed after the merge or 12/19</inlineHelpText>
        <label>Meyers Id</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Num_of_Baths__c</fullName>
        <label># of Baths</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Num_of_Beds__c</fullName>
        <label># of Beds</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Num_of_Floors__c</fullName>
        <label># of Floors</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Num_of_Full_Baths__c</fullName>
        <label># of Full Baths</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Num_of_Half_Baths__c</fullName>
        <label># of Half Baths</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Off_Market__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Off-Market</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Plan_Name__c</fullName>
        <label>New Plan Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plan_Notes__c</fullName>
        <label>Plan Notes</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plan__c</fullName>
        <label>Plan</label>
        <referenceTo>Plan__c</referenceTo>
        <relationshipLabel>Plan Update Requests</relationshipLabel>
        <relationshipName>Plan_Update_Requests</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Previous_Garage__c</fullName>
        <label>Previous Garage</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Previous_Num_of_Baths__c</fullName>
        <label>Previous # of Baths</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Previous_Num_of_Beds__c</fullName>
        <label>Previous # of Beds</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Previous_Num_of_Floors__c</fullName>
        <label>Previous # of Floors</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Previous_Num_of_Full_Baths__c</fullName>
        <label>Previous # of Full Baths</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Previous_Num_of_Half_Baths__c</fullName>
        <label>Previous # of Half Baths</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Previous_Off_Market__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Previous Off-Market</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Previous_Plan_Name__c</fullName>
        <label>Previous Plan Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Plan_Notes__c</fullName>
        <label>Previous Plan Notes</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Price__c</fullName>
        <label>Previous Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Previous_Square_Footage__c</fullName>
        <label>Previous Square Footage</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Price_Unchanged__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Price Unchanged</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Base Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Project_Update_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Update Request</label>
        <referenceTo>Project_Update_Request__c</referenceTo>
        <relationshipLabel>Plan Update Requests</relationshipLabel>
        <relationshipName>Plan_Update_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Plan Update Requests</relationshipLabel>
        <relationshipName>Plan_Update_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Square_Footage__c</fullName>
        <label>Square Footage</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Update_Request_Status__c</fullName>
        <label>Update Request Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                    <default>true</default>
                    <label>Pending</label>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Review</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Update_Request_Type__c</fullName>
        <label>Update Request Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Update</fullName>
                    <default>true</default>
                    <label>Update</label>
                </value>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Delete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Plan Update Request</label>
    <nameField>
        <displayFormat>PLUR-{0000000}</displayFormat>
        <label>Plan Update Request Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Plan Update Requests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>